--- a/Academico/Views/Shared/_Layout.cshtml
+++ b/Academico/Views/Shared/_Layout.cshtml
@@ -50,7 +50,7 @@
             &copy; 2025 - Academico - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
         <div>
-            Construído por seu nome 
+            Construído por Gustavo de Oliveira
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
