--- a/Academico/Views/Home/Privacy.cshtml
+++ b/Academico/Views/Home/Privacy.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Política de Privacidade";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Este site acadêmico tem como objetivo disponibilizar conteúdos e materiais de estudo para fins educacionais.<br />
+    Prezamos pela privacidade e segurança das informações de nossos usuários.</p>
