--- a/Academico/Views/Aluno/Index.cshtml
+++ b/Academico/Views/Aluno/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Criar Novo</a>
 </p>
 <table class="table">
     <thead>
@@ -37,9 +37,9 @@
                 @Html.DisplayFor(modelItem => item.Cep)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.AlunoID }) |
-                @Html.ActionLink("Details", "Details", new {  id=item.AlunoID  }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.AlunoID })
+                @Html.ActionLink("Editar", "Editar", new {  id=item.AlunoID }) |
+                @Html.ActionLink("Detalhes", "Detalhes", new {  id=item.AlunoID  }) |
+                @Html.ActionLink("Deletar", "Deletar", new {  id=item.AlunoID })
             </td>
         </tr>
 }
